Fix bug - text overlap icons

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -11,7 +11,7 @@ li {
         pointer-events: none;
         top: 0;
         left: 0;
-        padding: 18px;
+        padding: 17px;
         transition: 0.2s;
         font-size: 1.2rem;
 
@@ -22,22 +22,28 @@ li {
     }
 
     .material-symbols-outlined {
-        position: absolute;
-        top: 0;
-        right: 0;
-        padding: 13px;
-        padding-right: 0;
+        align-self: center;
+        padding: 10px;
         display: none;
+        
     }
 
-    input {
+    .input {
         width: 100%;
-        height: 25px;
-        padding: 10px;
+        height: 40px;
         border: 2px solid black;
         border-radius: 5px;
         font-size: 1.5rem;
         outline: none;
+        display: flex;
+    }
+
+    input {
+        width: 82%;
+        padding: 10px;
+        border: none;
+        outline: none;
+        flex: 1;
     }
 
     input:focus~label,
@@ -66,6 +72,11 @@ li {
     input:not(:placeholder-shown):valid~.material-symbols-outlined.correct {
         display: block;
         font-weight: bolder;
+    }
+
+    input:not(:placeholder-shown):valid~label {
+        background-color: black;
+        color: white;
     }
 
 
